// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GifGrid Should create GifGrid correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInLeft"
  >
    Pokémon
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Testing GifGrid Should show items when images finished loading 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInLeft"
  >
    Pokémon
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="foo"
      key="foo"
      title="bar"
      url="https://foo"
    />
    <GifGridItem
      id="bar"
      key="bar"
      title="bar"
      url="https://foo"
    />
  </div>
</Fragment>
`;
